--- a/src/css/App.css
+++ b/src/css/App.css
@@ -2,7 +2,7 @@
 
 @import url('https://fonts.googleapis.com/css2?family=Chakra+Petch:wght@300;400;700&family=Poppins:wght@300;400;700&display=swap');
 
-body, .title, li {
+body, .title {
     font-family: 'Chakra Petch', sans-serif;
 }
 
