--- a/src/css/Clientes.css
+++ b/src/css/Clientes.css
@@ -1,8 +1,8 @@
 .clientes-section {
     padding: 2rem 0rem;
-    background-color: #f4f4f4; /* Fondo claro */
+    background-color: #f4f4f4;
     text-align: center;
-    overflow: hidden; /* Esconde el overflow para el deslizamiento continuo */
+    overflow: hidden;
 }
 
 .clientes-title {
@@ -14,24 +14,25 @@
 .clientes-slider {
     display: flex;
     flex-direction: column;
-    gap: 2rem; /* Espaciado entre las dos filas */
+    gap: 2rem;
     background-color: #00940c;
     padding: 2rem 0rem;
-    overflow: hidden; /* Para asegurar que el deslizamiento no se salga del contenedor */
+    overflow: hidden;
 }
 
 .clientes-row {
     display: flex;
-    flex-wrap: nowrap; /* Evita el ajuste de línea para mantener las imágenes en una fila */
-    animation: slide 20s linear infinite; /* Animación de deslizamiento */
+    flex-wrap: nowrap;
+    animation: slide 20s linear infinite;
+    animation-play-state: running; /* Animación en ejecución por defecto */
 }
 
 .first-row {
-    animation-direction: normal; /* Deslizamiento hacia la derecha */
+    animation-direction: normal;
 }
 
 .second-row {
-    animation-direction: reverse; /* Deslizamiento hacia la derecha */
+    animation-direction: reverse;
 }
 
 .cliente-item {
@@ -39,13 +40,13 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    margin: 0 1rem; /* Espaciado lateral entre los logotipos */
+    margin: 0 1rem;
 }
 
 .cliente-logo {
     width: 150px;
-    height: 150px; /* Ajusta la altura máxima del logotipo */
-    object-fit: contain; /* Mantiene la proporción del logotipo */
+    height: 150px;
+    object-fit: contain;
     padding: 10px;
     border-radius: 5%;
     background-color: white;
@@ -56,19 +57,24 @@
         transform: translateX(0);
     }
     100% {
-        transform: translateX(-100%); /* Se desliza a lo largo de toda la fila */
+        transform: translateX(-100%);
     }
 }
 
 @media (max-width: 768px) {
     .clientes-row {
-        animation: slide 20s linear infinite; /* Ajuste de velocidad para dispositivos móviles */
+        animation: slide 20s linear infinite;
     }
     .first-row {
-        animation-direction: normal; /* Deslizamiento hacia la derecha */
+        animation-direction: normal;
     }
     
     .second-row {
-        animation-direction: reverse; /* Deslizamiento hacia la derecha */
+        animation-direction: reverse;
     }
+}
+
+/* Detener la animación al hacer hover */
+.clientes-row:hover {
+    animation-play-state: paused;
 }
