--- a/src/css/Section.css
+++ b/src/css/Section.css
@@ -40,8 +40,16 @@
     width: 470px;
     height: 470px;
     border-radius: 10px;
-    object-fit: fill;
+    object-fit: cover;
+    transition: transform 0.1s ease-out, box-shadow 0.1s ease-out;
+    transform-style: preserve-3d;
+    box-shadow: 0px 10px 30px rgba(0, 0, 0, 0.2); /* Sombra inicial */
 }
+
+.section-image {
+    perspective: 1000px;
+}
+
 
 /* Responsive Styles */
 @media (max-width: 768px) {
