--- a/src/css/Section.css
+++ b/src/css/Section.css
@@ -1,9 +1,9 @@
 .section {
     display: flex;
     align-items: center;
-    justify-content: space-between;
+    justify-content: space-around;
     padding: 4rem 2rem;
-    height: 100vh;
+    height: 50vh;
     position: relative;
 }
 
@@ -14,7 +14,6 @@
 .section-number {
     font-size: 2rem;
     font-weight: bold;
-    margin: 0 2rem;
     position: relative;
 }
 
@@ -24,21 +23,21 @@
 }
 
 .section h2 {
-    font-size: 3.7rem;
+    font-size: 3rem;
     font-weight: 300;
     margin-bottom: 1rem;
 }
 
 .section p {
-    font-size: 1.5rem;
-    line-height: 3rem;
+    font-size: 1.2rem;
+    line-height: 2rem;
     font-weight: 500;
     text-align: justify;
 }
 
 .section-image img {
-    width: 470px;
-    height: 470px;
+    width: 250px;
+    height: 250px;
     border-radius: 10px;
     object-fit: cover;
     transition: transform 0.1s ease-out, box-shadow 0.1s ease-out;
