--- a/src/css/Header.css
+++ b/src/css/Header.css
@@ -8,6 +8,8 @@
     justify-content: space-between;
     align-items: center;
     padding: 1rem;
+    padding-bottom: 0.5rem;
+    margin-bottom: 1rem;
 }
 
 nav {
@@ -16,7 +18,7 @@ nav {
 }
 
 .logo img {
-    height: 45px;
+    height: 75px;
     margin-left: 1rem;
 }
 
